--- a/index.css
+++ b/index.css
@@ -1,17 +1,56 @@
 *{
     margin: 0;
-    padding: 10px;
+
+    font-family: sans-serif;
 }
 
 header{
-    display: grid;
-    align-items: start;
+    display: flex; /* Para mostrarse horizontalmente*/
+  padding: 15px;
+    align-items: center;
+    justify-content: space-between;
+    height: 70px;
+    background-color: black;
+    
 }
 
+.logo{
+  display: flex;
+
+}
+.logo img {
+  width:64px;
+  height:64px;
+
+}
 li{
     list-style-type:none;
 }
 a{
     text-decoration: none;
-    color:black;
+
+    color: #fff;
+    text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px #fff,
+    0 0 82px #fff,
+    0 0 92px #fff,
+    0 0 102px #fff,
+    0 0 151px #fff;
 }
+.neonText {
+  color: #fff;
+  text-shadow:
+  0 0 7px #fff,
+  0 0 10px #fff,
+  0 0 21px #fff,
+  0 0 42px #fff,
+  0 0 82px #fff,
+  0 0 92px #fff,
+  0 0 102px #fff,
+  0 0 151px #fff;
+
+}
+
