--- a/index.css
+++ b/index.css
@@ -13,14 +13,7 @@ header {
   background-color: black;
 }
 
-.logo {
-  display: flex;
-}
-.logo img {
-  width: 64px;
-  height: 64px;
-  margin-right: 10px;
-}
+
 li {
   list-style-type: none;
 
@@ -61,7 +54,9 @@ a {
   width: 100%;
   height: auto;
 }
-
+.card img{
+  width: 170px;
+}
 .card-content {
   padding: 15px;
 }
@@ -69,6 +64,7 @@ a {
 @media only screen and (max-width: 600px) {
   .card {
     width: calc(50% - 20px);
+    width: 120px;
   }
 }
 
@@ -97,7 +93,7 @@ a {
 /* Responsive columns - one column layout (vertical) on small screens */
 @media screen and (max-width: 600px) {
   .column {
-    width: 100%;
+    width: 50%;
     display: block;
     margin-bottom: 20px;
   }
@@ -110,9 +106,8 @@ a {
   
   
 }
-
 #usuarios{
-  width: 100%;
-  float:left;
-
+  margin: 10px;
+  display:wrap;
+  padding: 40px;
 }
